--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
   }
