--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.12.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,16 +16,27 @@
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
+    "dompurify": "^3.0.6",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^10.16.4",
+    "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
+    "placeholder-loading": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^9.0.0",
+    "react-placeholder-loading": "^0.5.30",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +66,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.0.0" 
+    "typescript": "^4.0.0"
   }
 }
