--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,6 +41,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "homepage": ".",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
