--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_BASE_URL=http://localhost:8080
+REACT_APP_BASE_URL=https://medium-backend-production.up.railway.app
+URL2=http://localhost:8080
 URL=https://medium-backend-production.up.railway.app
