--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
+    "firebase": "^10.6.0",
     "dompurify": "^3.0.6",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^10.16.4",
