--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,4 @@
-REACT_APP_BASE_URL=http://localhost:8080
+REACT_APP_BASE_URL=https://zany-red-donkey-belt.cyclic.app
+URL1=http://localhost:8080
 URL=https://medium-backend-production.up.railway.app
+URL2=https://zany-red-donkey-belt.cyclic.app
